--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "prism",
   "version": "0.1.0",
+  "proxy": "http://localhost:8090",
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@react-google-maps/api": "^2.20.6",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
     "chart.js": "^4.4.9",
     "date-fns": "^2.30.0",
     "framer-motion": "^12.9.2",
