--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-json-view": "^1.21.3",
     "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
